[gd_scene load_steps=3 format=3 uid="uid://mayunnsp8hti"]

[ext_resource type="Script" uid="uid://bog2ejfdv86bq" path="res://scenes/player/building_manager.gd" id="1_6i6tn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ponsd"]
radius = 24.0

[node name="BuildingManager" type="Area2D"]
script = ExtResource("1_6i6tn")

[node name="BuildShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ponsd")

[node name="BuildingList" type="Node2D" parent="."]

[node name="GhostTimer" type="Timer" parent="."]
unique_name_in_owner = true
